# ChangeLog for dev-libs/tinygettext
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  29 Jan 2010; Nathan Phillip Brink (ohnobinki)
  <ohnobinki@ohnopublishing.net> +tinygettext-9999.ebuild, +metadata.xml:
  New ebuild for installable tinygettext for SuperTux
