@@ -1,3 +1,13 @@
-EBUILD tinygettext-9999.ebuild 517 RMD160 bc6c7c7198d94f38d3c9d75f2031dac99c701414 SHA1 5e095591cb5cef2d4105a24fd212765733b989ce SHA256 5f6864d3a0127dd192d7588e66a0fad10f5e62ac3978768cb74f547b3b11590a
-MISC ChangeLog 298 RMD160 871dd330747b40e8f26e1fbc572089d123f9e843 SHA1 0bddc2013372c1f99dc2ba23ca6b64f57f3fb979 SHA256 2e1f87296b615849f7b9b63ad3a207d1a52c33d4ec36b926048a5d9ad3f7b13c
-MISC metadata.xml 172 RMD160 ac9d8165526474ed01605b242677b133677d627e SHA1 379fab1397357de050c74be1cbbb2da37ee3fcdd SHA256 74bc726733e7fd45be5b7a40fe34b62f1502551d6ee5797e65fc75522ead5972
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+EBUILD tinygettext-9999.ebuild 525 RMD160 4ecad4a1d882a08e97aa9c4256799875972ef942 SHA1 87cb9220562da29b00babd1ac3a17168603e4830 SHA256 ad062cb594f024b2508ef5e9596a7a3f100ab294bc9fb3ef476dcd5a30866134
+MISC ChangeLog 471 RMD160 b4def04b19df32957d1e239a58fe5b67595772e4 SHA1 f55e5f2a08943ccfc174bd44ec511d4dc7f8cc3a SHA256 80b278f1cf1cde27093fe7959f924aa21dff6da97f9395c868cb8f2979c2ce67
+MISC metadata.xml 218 RMD160 0325320469a495bd5ebc0027a3cb795f0e2dc3f0 SHA1 73201ca4e86313a75325786ec88fdcd7d90628bb SHA256 c2becfc3260a1b57a64c3de67159aee663b596fbb18448656d1deddabe18b668
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.14 (GNU/Linux)
+
+iEYEARECAAYFAkyQWnsACgkQni8M22OVw8DQzACgmU0xUaiQNGY3eu70vlDiGdzJ
+6IgAnRkxIQ58ner7SvResrU5fo8Wzxwn
+=Lw8W
+-----END PGP SIGNATURE-----
