@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-  <herd>maintainer-wanted</herd>
+  <maintainer>
+    <email>maintainer-wanted@gentoo.org</email>
+  </maintainer>
 </pkgmetadata>
