@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  15 Sep 2010; Nathan Phillip Brink (ohnobinki)
+  <ohnobinki@ohnopublishing.net> tinygettext-9999.ebuild, metadata.xml:
+  Fixed metadata.xml and use of cmake-utils eclass.
+
   29 Jan 2010; Nathan Phillip Brink (ohnobinki)
   <ohnobinki@ohnopublishing.net> +tinygettext-9999.ebuild, +metadata.xml:
   New ebuild for installable tinygettext for SuperTux
